Added deploy and undeploy capabilities to Tomcat

--- a/etc/cas.properties
+++ b/etc/cas.properties
@@ -27,7 +27,8 @@ cas.log.dir=${user.home}/cas-log
 host.name=rdconnectcas.rd-connect.eu
 
 server.name=https://${host.name}:9443
-server.prefix=${server.name}/cas
+cas.context=/cas
+server.prefix=${server.name}${cas.context}
 # IP address or CIDR subnet allowed to access the /status URI of CAS that exposes health check information
 cas.securityContext.status.allowedSubnet=127.0.0.1
 
@@ -224,7 +225,8 @@ cas.securityContext.casProcessingFilterEntryPoint.loginUrl=${cas.prefix}/login
 cas.securityContext.ticketValidator.casServerUrlPrefix=${cas.prefix}
 # Management
 cas-management.host=${server.name}
-cas-management.prefix=${cas-management.host}/cas-management
+cas-management.context=/cas-management
+cas-management.prefix=${cas-management.host}${cas-management.context}
 cas-management.securityContext.serviceProperties.service=${cas-management.prefix}/j_spring_cas_security_check
 cas-management.securityContext.serviceProperties.adminRoles=ROLE_ADMIN
 
