Fixed ant project file, so it now gets tomcat deployment parameters from etc/tomcat-deployment.properties

--- a/build.xml
+++ b/build.xml
@@ -19,7 +19,7 @@
     under the License.
 
 -->
-<project name="cas-management" default="deploy" basedir=".">
+<project name="cas" default="deploy" basedir=".">
 
 	<!-- ******************* PROPERTIES ************************* -->
 	<property environment="env" />
@@ -29,7 +29,7 @@
 	<property name="tomcat.log.patterns" value="**/*.log, **/*.txt" />
 	<taskdef resource="net/sf/antcontrib/antcontrib.properties" />
 	<property file="etc/cas.properties" />
-	<property file="${user.home}/etc/cas/tomcat-deployment.properties" />
+	<property file="${basedir}/etc/tomcat-deployment.properties" />
 
 	<property name="catalina.home" location="/usr/share/tomcat"/>
 	
