Switching to LDAP authentication protocol, and fixing configuration issues on setup block.

--- a/etc/cas.properties
+++ b/etc/cas.properties
@@ -162,24 +162,26 @@ database.hibernate.batchSize=30
 # == General LDAP connection settings ==
 
 # Search filter when using a search-and-bind strategy.
-ldap.authn.searchFilter=sAMAccountName=%u
+ldap.authn.searchFilter=(uid={user})
 
 # Directory URL. Only one URL should be supplied.
 # For deployments that need HA directory connections, hardware load balancing with a
 # single virtual host is the only reasonable solution.
-ldap.url=ldap://1.1.1.1
-ldap.useSSL=false
-ldap.useStartTLS=true
+
+
+ldap.url=ldap://ldap.rd-connect.eu
+ldap.useSSL=true
+ldap.useStartTLS=false
 
 
 # Base DN for directory searches.
-ldap.authn.baseDn=cn=users,dc=school,dc=edu
+ldap.authn.baseDn=ou=people,dc=rd-connect,dc=eu
 
 # Manager credentials to bind; only used for searches.
 # Only required by directories that prevent anonymous queries (e.g. AD) when performing
 # a search-and-bind authentication strategy.
-ldap.managerDn=cn=manager,cn=users,dc=school,dc=edu
-ldap.managerPassword=password
+ldap.managerDn=cn=admin,dc=rd-connect,dc=eu
+ldap.managerPassword=123.qwe
 
 # Strongly recommended for AD.
 ldap.authentication.ignorePartialResultException=true
@@ -188,7 +190,9 @@ ldap.connectTimeout=3000
 
 # == Connection pooling settings ==
 
-ldap.pool.minSize=3
+# Changed to avoid masking ldap authentication messages 
+#ldap.pool.minSize=3
+ldap.pool.minSize=0
 ldap.pool.maxSize=10
 ldap.pool.blockWaitTime=3000
 # One of these three must be true
@@ -213,7 +217,7 @@ ldap.authentication.pool.evictionPeriod=600000
 # they become liable to eviction.
 ldap.pool.idleTime=1200000
 
-ldap.trustedCert=
+ldap.trustedCert=file:/etc/ssl/certs/cacert.pem
 
 
 
