Enabled CAS logout service redirection behavior

--- a/etc/cas.properties
+++ b/etc/cas.properties
@@ -51,7 +51,7 @@ cas.viewResolver.basename=default_views
 # WEB-INF/cas-servlet.xml
 #
 # Specify whether CAS should redirect to the specified service parameter on /logout requests
-# cas.logout.followServiceRedirects=false
+cas.logout.followServiceRedirects=true
 
 ##
 # Single Sign-On Session Timeouts
@@ -181,6 +181,7 @@ ldap.authn.baseDn=ou=people,dc=rd-connect,dc=eu
 # Only required by directories that prevent anonymous queries (e.g. AD) when performing
 # a search-and-bind authentication strategy.
 ldap.managerDn=cn=admin,dc=rd-connect,dc=eu
+# Change this fake password by the real one used in the setup environment
 ldap.managerPassword=123.qwe
 
 # Strongly recommended for AD.
@@ -217,6 +218,7 @@ ldap.authentication.pool.evictionPeriod=600000
 # they become liable to eviction.
 ldap.pool.idleTime=1200000
 
+# Change this file and path according to your setup
 ldap.trustedCert=file:/etc/ssl/certs/cacert.pem
 
 
