Changed fake password to a more evident one

--- a/etc/cas.properties
+++ b/etc/cas.properties
@@ -182,7 +182,7 @@ ldap.authn.baseDn=ou=people,dc=rd-connect,dc=eu
 # a search-and-bind authentication strategy.
 ldap.managerDn=cn=admin,dc=rd-connect,dc=eu
 # Change this fake password by the real one used in the setup environment
-ldap.managerPassword=123.qwe
+ldap.managerPassword=ChangeIt!!!
 
 # Strongly recommended for AD.
 ldap.authentication.ignorePartialResultException=true
