CAS services directory has been moved out of generated war file, and put on etc/cas directory

--- a/etc/cas.properties
+++ b/etc/cas.properties
@@ -222,6 +222,8 @@ ldap.pool.idleTime=1200000
 ldap.trustedCert=file:/etc/ssl/certs/cacert.pem
 
 
+# Service registry directory
+service.registry.config.location=file:${cas.resources.dir}/services
 
 # CAS management webapp configuration
 # hosts and urls
