Added key generator and fixed cas errors

--- a/etc/cas.properties
+++ b/etc/cas.properties
@@ -30,8 +30,12 @@ server.port=9443
 server.name=${server.protocol}://${host.name}:${server.port}
 cas.context=/cas
 server.prefix=${server.name}${cas.context}
-# IP address or CIDR subnet allowed to access the /status URI of CAS that exposes health check information
-cas.securityContext.status.allowedSubnet=127.0.0.1
+
+# Spring Security's EL-based access rules for the /status URI of CAS that exposes health check information
+cas.securityContext.status.access=hasIpAddress('127.0.0.1')
+
+# Spring Security's EL-based access rules for the /statistics URI of CAS that exposes stats about the CAS server
+cas.securityContext.statistics.access=hasIpAddress('127.0.0.1')
 
 
 cas.themeResolver.defaultThemeName=cas-theme-default
@@ -45,6 +49,44 @@ cas.viewResolver.basename=default_views
 # database.hibernate.dialect=org.hibernate.dialect.OracleDialect
 # database.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 # database.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+##
+# CAS SSO Cookie Generation & Security
+# See https://github.com/mitreid-connect/json-web-key-generator
+#
+# Do note that the following settings MUST be generated per deployment.
+#
+# Defaults at spring-configuration/ticketGrantingTicketCookieGenerator.xml
+# The encryption secret key. By default, must be a octet string of size 256.
+tgc.encryption.key=
+
+# The signing secret key. By default, must be a octet string of size 512.
+tgc.signing.key=
+
+# Decides whether SSO cookie should be created only under secure connections.
+# tgc.secure=true
+
+# The expiration value of the SSO cookie
+# tgc.maxAge=-1
+
+# The name of the SSO cookie
+# tgc.name=TGC
+
+# The path to which the SSO cookie will be scoped
+# tgc.path=/cas
+
+# Decides whether SSO Warning cookie should be created only under secure connections.
+# warn.cookie.secure=true
+
+# The expiration value of the SSO Warning cookie
+# warn.cookie.maxAge=-1
+
+# The name of the SSO Warning cookie
+# warn.cookie.name=CASPRIVACY
+
+# The path to which the SSO Warning cookie will be scoped
+# warn.cookie.path=/cas
+
 
 ##
 # CAS Logout Behavior
@@ -95,7 +137,7 @@ cas.logout.followServiceRedirects=true
 #
 # It is often time helpful to externalize log4j.xml to a system path to preserve settings between upgrades.
 # e.g. log4j.config.location=/etc/cas/log4j.xml
-log4j.config.location=${cas.resources.dir}/log4j2.xml
+log4j.config.location=file:${cas.resources.dir}/log4j2.xml
 # log4j refresh interval in millis
 log4j.refresh.interval=60000
 
