Changes in configuration for CAS 4.1

--- a/etc/cas.properties
+++ b/etc/cas.properties
@@ -206,6 +206,13 @@ database.hibernate.batchSize=30
 # Search filter when using a search-and-bind strategy.
 ldap.authn.searchFilter=(uid={user})
 
+# Base DN for directory searches.
+ldap.authn.baseDn=ou=people,dc=rd-connect,dc=eu
+
+# Search filter used for configurations that require searching for DNs
+#ldap.authn.format=uid=%s,ou=Users,dc=example,dc=org
+ldap.authn.format=uid=%s,${ldap.authn.baseDn}
+
 # Directory URL. Only one URL should be supplied.
 # For deployments that need HA directory connections, hardware load balancing with a
 # single virtual host is the only reasonable solution.
@@ -215,9 +222,6 @@ ldap.url=ldap://ldap.rd-connect.eu
 ldap.useSSL=true
 ldap.useStartTLS=false
 
-
-# Base DN for directory searches.
-ldap.authn.baseDn=ou=people,dc=rd-connect,dc=eu
 
 # Manager credentials to bind; only used for searches.
 # Only required by directories that prevent anonymous queries (e.g. AD) when performing
