Only not disabled accounts are allowed

--- a/etc/cas.properties
+++ b/etc/cas.properties
@@ -204,7 +204,7 @@ database.hibernate.batchSize=30
 # == General LDAP connection settings ==
 
 # Search filter when using a search-and-bind strategy.
-ldap.authn.searchFilter=(uid={user})
+ldap.authn.searchFilter=(&(uid={user})(disabledAccount=FALSE))
 
 # Base DN for directory searches.
 ldap.authn.baseDn=ou=people,dc=rd-connect,dc=eu
