--- a/pom.xml
+++ b/pom.xml
@@ -62,11 +62,27 @@
         </dependency>
         
         <dependency>
-			<groupId>org.ldaptive</groupId>
-			<artifactId>ldaptive-unboundid</artifactId>
-			<version>1.0.6</version>
+		<groupId>org.ldaptive</groupId>
+		<artifactId>ldaptive-unboundid</artifactId>
+		<version>1.0.6</version>
+        </dependency>
+        
+        <!--
+		These two dependencies were added due
+		https://groups.google.com/forum/#!topic/jasig-cas-user/WsxxUHahrM8
+	-->
+        <dependency>
+		<groupId>org.jasig.service.persondir</groupId>
+		<artifactId>person-directory-api</artifactId>
+		<version>${cas.person.directory.version}</version>
         </dependency>
 	
+        <dependency>
+		<groupId>org.jasig.service.persondir</groupId>
+		<artifactId>person-directory-impl</artifactId>
+		<version>${cas.person.directory.version}</version>
+        </dependency>
+        
 	<!-- These dependencies are only needed using SQLite as user accounts backend
         <dependency>
             <groupId>org.jasig.cas</groupId>
@@ -146,6 +162,7 @@
                                 <exclude>WEB-INF/cas.properties</exclude>
                                 <exclude>WEB-INF/lib/hibernate-*.jar</exclude>
                                 -->
+                                <exclude>WEB-INF/lib/person-directory-*.jar</exclude>
                             </excludes>
                         </overlay>
                     </overlays>
@@ -183,6 +200,7 @@
 
     <properties>
         <cas.version>4.1.1</cas.version>
+        <cas.person.directory.version>1.7.1-M3</cas.person.directory.version>
         <commons.dbcp.version>1.4</commons.dbcp.version>
         <hibernate.entitymgmr.version>4.1.12.Final</hibernate.entitymgmr.version>
         <hibernate.validator.version>4.2.0.Final</hibernate.validator.version>
