--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,8 @@
         <!--
 		These two dependencies were added due
 		https://groups.google.com/forum/#!topic/jasig-cas-user/WsxxUHahrM8
+		Basically, with default version in CAS 4.1.1, LDAP attribute
+		names with capital letters are not recognized, being skipped
 	-->
         <dependency>
 		<groupId>org.jasig.service.persondir</groupId>
