--- a/pom.xml
+++ b/pom.xml
@@ -52,42 +52,17 @@
 	<scope>runtime</scope>
 	</dependency>
 	
-	<!-- This should not be explicitly needed any more
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>${hibernate.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>${hibernate.entitymgmr.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
-            <version>${hibernate.validator.version}</version>
-        </dependency>
-        -->
 	<dependency>
 	    <groupId>org.jasig.cas</groupId>
 	    <artifactId>cas-server-core</artifactId>
 	    <version>${cas.version}</version>
-	    <!-- This should not be explicitly needed any more
-            <exclusions>
-                <exclusion>
-                    <groupId>org.hibernate</groupId>
-                    <artifactId>hibernate-core</artifactId>
-                </exclusion>
-            </exclusions>
-            -->
 	</dependency>
 
 	<dependency>
 	    <groupId>org.jasig.cas</groupId>
-	    <artifactId>cas-server-integration-restlet</artifactId>
+	    <artifactId>cas-server-support-rest</artifactId>
 	    <version>${cas.version}</version>
+	    <scope>runtime</scope>
 	</dependency>
 	
         <dependency>
@@ -99,7 +74,7 @@
         <dependency>
 		<groupId>org.ldaptive</groupId>
 		<artifactId>ldaptive-unboundid</artifactId>
-		<version>1.0.6</version>
+		<version>1.0.7</version>
         </dependency>
         
 	<!-- These dependencies are only needed using SQLite as user accounts backend
@@ -218,12 +193,9 @@
     </build>
 
     <properties>
-        <cas.version>4.1.2</cas.version>
-        <cas.person.directory.version>1.7.1-M3</cas.person.directory.version>
+        <cas.version>4.1.7</cas.version>
+        <cas.person.directory.version>1.7.1</cas.person.directory.version>
         <commons.dbcp.version>1.4</commons.dbcp.version>
-        <hibernate.entitymgmr.version>4.1.12.Final</hibernate.entitymgmr.version>
-        <hibernate.validator.version>4.2.0.Final</hibernate.validator.version>
-        <hibernate.version>4.1.12.Final</hibernate.version>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
