--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -97,7 +97,7 @@
 		
 		<init-param>
 			<param-name>cors.allowed.origins</param-name>
-			<param-value>http://platform.rd-connect.eu , https://platform.rd-connect.eu , http://172.16.20.56:80:8081</param-value>
+			<param-value>http://platform.rd-connect.eu , https://platform.rd-connect.eu , http://172.16.20.56:8081 , https://172.16.20.56:8081 , http://172.16.20.56 , https://172.16.20.56</param-value>
 		</init-param>
 	</filter>
 	<filter-mapping>
