--- a/etc/cas.properties.template
+++ b/etc/cas.properties.template
@@ -63,10 +63,10 @@ cas.viewResolver.basename=default_views
 #
 # Defaults at spring-configuration/ticketGrantingTicketCookieGenerator.xml
 # The encryption secret key. By default, must be a octet string of size 256.
-tgc.encryption.key=
+#tgc.encryption.key=
 
 # The signing secret key. By default, must be a octet string of size 512.
-tgc.signing.key=
+#tgc.signing.key=
 
 # Decides whether SSO cookie should be created only under secure connections.
 # tgc.secure=true
