--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -270,6 +270,11 @@
     </servlet-mapping>
     -->
 
+    <servlet-mapping>
+ 	<servlet-name>cas</servlet-name>
+  	<url-pattern>/samlValidate</url-pattern>
+    </servlet-mapping>
+
     <session-config>
         <!-- Default to 5 minute session timeouts -->
         <session-timeout>5</session-timeout>
